Fix the uneven spacing of latest posts grid

--- a/sass/elements/blocks/_latest-posts.scss
+++ b/sass/elements/blocks/_latest-posts.scss
@@ -3,8 +3,22 @@
 	font-family: $font-button;
 	font-weight: 700;
 	margin: spacing(2) 0;
+	padding: 0;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-gap: spacing(1);
+
+	&.is-grid {
+		display: grid;
+
+		li {
+			margin: 0;
+			width: 100%;
+		}
+	}
 
 	li {
+		width: 100%;
 		background: $grey;
 		color: $white;
 		padding: spacing(2);
@@ -48,5 +62,26 @@
 				align-self: flex-end;
 			}
 		}
+
+		&.columns-2 {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		&.columns-3 {
+			grid-template-columns: repeat(3, 1fr);
+		}
+
+		&.columns-4 {
+			grid-template-columns: repeat(4, 1fr);
+		}
+
+		&.columns-5 {
+			grid-template-columns: repeat(5, 1fr);
+		}
+
+		&.columns-6 {
+			grid-template-columns: repeat(6, 1fr);
+		}
+
 	}
 }
