--- a/style.css
+++ b/style.css
@@ -648,8 +648,18 @@ hr {
   -moz-osx-font-smoothing: grayscale;
   font-family: "Nunito", "Tahoma", "Verdana", sans-serif;
   font-weight: 700;
-  margin: 30px 0; }
+  margin: 30px 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px; }
+  .wp-block-latest-posts.is-grid {
+    display: grid; }
+    .wp-block-latest-posts.is-grid li {
+      margin: 0;
+      width: 100%; }
   .wp-block-latest-posts li {
+    width: 100%;
     background: #303030;
     color: #fff;
     padding: 30px;
@@ -680,7 +690,17 @@ hr {
         width: 100%; }
       .wp-block-latest-posts li a {
         -ms-flex-item-align: end;
-            align-self: flex-end; } }
+            align-self: flex-end; }
+    .wp-block-latest-posts.columns-2 {
+      grid-template-columns: repeat(2, 1fr); }
+    .wp-block-latest-posts.columns-3 {
+      grid-template-columns: repeat(3, 1fr); }
+    .wp-block-latest-posts.columns-4 {
+      grid-template-columns: repeat(4, 1fr); }
+    .wp-block-latest-posts.columns-5 {
+      grid-template-columns: repeat(5, 1fr); }
+    .wp-block-latest-posts.columns-6 {
+      grid-template-columns: repeat(6, 1fr); } }
 
 .wp-block-pullquote.wp-block-pullquote {
   background: #303030 url("https://wc-us.org/wp-content/uploads/2019/04/speech.svg") 60px center no-repeat !important;
